# cuteataxx

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-linux.sh  makefile  settings.md
libs/: elo.hpp  sprt.hpp  utils.hpp
libs/libataxx/: constants.hpp  engine.hpp  move.hpp  other.hpp  pgn.hpp  position.hpp  pv.hpp  search.hpp  test.hpp  uaiengine.hpp
res/: benchmark.json  settings.json
res/openings/: ply1.txt  ply2.txt  ply3.txt  ply3_fair.txt  tournament.txt  unusual.txt
src/: cache.hpp  elo.hpp  engine.hpp  main.cpp  match.hpp  play.cpp  player.hpp  run.cpp  settings.hpp  uaiengine.hpp  uciengine.hpp  worker.hpp
src/cli/: CMakeLists.txt  main.cpp
src/cli/engine/: engine.hpp  fairy_stockfish.hpp  katago.hpp  settings.hpp  uaiengine.hpp  uciengine.hpp
src/cli/match/: play.cpp  play.hpp  run.cpp  settings.hpp  worker.cpp  worker.hpp
src/cli/parse/: openings.cpp  openings.hpp  settings.cpp
src/cli/players/: least_captures.hpp  most_captures.hpp  random.hpp
src/core/: cache.hpp  parse_move.cpp  pgn.cpp  pgn.hpp  play.cpp  play.hpp
src/core/ataxx/: adjudicate.cpp  adjudicate.hpp  parse_move.hpp
src/core/engine/: create.cpp  create.hpp  engine.hpp  fairy_stockfish.hpp  katago.hpp  process.hpp  settings.hpp  uaiengine.hpp
src/core/engine/builtin/: least_captures.hpp  most_captures.hpp  random.hpp
src/core/match/: callbacks.hpp  results.hpp  run.cpp  run.hpp  settings.hpp  worker.cpp  worker.hpp
src/core/parse/: openings.cpp  settings.cpp
src/core/tournament/: gauntlet.hpp  generator.hpp  roundrobin.hpp  roundrobin_mixed.hpp  types.hpp
src/engine/: engine.hpp  uaiengine.hpp  uciengine.hpp
src/match/: engines.hpp  game.hpp  match.hpp  openings.hpp  play.cpp  play.hpp  results.hpp  run.cpp  run.hpp  settings.hpp  worker.cpp
src/parse/: openings.cpp  openings.hpp  settings.cpp  settings.hpp
src/parse/json/: engines.cpp  engines.hpp  file.cpp  file.hpp  pgn.cpp  pgn.hpp  timecontrol.cpp  timecontrol.hpp
src/tui/: CMakeLists.txt  main.cpp
src/tui/components/: board.hpp  clock.hpp  history.hpp  material_bar.hpp
src/tui/tabs/: about.hpp  base.hpp  game.hpp  results.hpp  schedule.hpp  settings.hpp
tests/: CMakeLists.txt
tests/core/: play.cpp
tests/core/ataxx/: adjudicate.cpp  parse_move.cpp
tests/core/tournament/: gauntlet.cpp  roundrobin.cpp  roundrobin_mixed.cpp
